--- a/controller/public/index.html
+++ b/controller/public/index.html
@@ -7,6 +7,7 @@
 		<title>AI</title>
 	</head>
 	<body>
+		<p id="initializing">Initializing cpp...</p>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/browser_send.js"></script>
 		<script src="/js/game.js"></script>		
