--- a/controller/public/index.html
+++ b/controller/public/index.html
@@ -8,8 +8,11 @@
 	</head>
 	<body>
 		<p id="initializing">Initializing cpp...</p>
+		<div id="container"></div>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/browser_send.js"></script>
+		<script src="/js/konva.min.js"></script>
+		<script src="/js/drawing.js"></script>		
 		<script src="/js/game.js"></script>		
 		<script src="/js/browser_receive.js"></script>
 	</body>
