--- a/controller/public/index.html
+++ b/controller/public/index.html
@@ -8,12 +8,21 @@
 	</head>
 	<body>
 		<p id="initializing">Initializing cpp...</p>
+
+		<input type="range" id="frame-delay-range" name="fdr" min="0" max="1000" step="25" value="100">
+		<label id="frame-delay-label" for="fdr">100ms</label>
+
+		<input type="checkbox" id="update-screen-checkbox" name="usc" checked>
+		<label for="usc">Update screen (not updating makes it learn a bit faster).</label>
+
 		<div id="container"></div>
+
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/browser_send.js"></script>
 		<script src="/js/konva.min.js"></script>
 		<script src="/js/drawing.js"></script>		
 		<script src="/js/game.js"></script>		
+		<script src="/js/dom.js"></script>
 		<script src="/js/browser_receive.js"></script>
 	</body>
 </html>
