--- a/controller/public/index.html
+++ b/controller/public/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="/css/style.css">
-		<title>AI</title>
+		<link rel="icon" href="/assets/favicon.png" type="image/x-icon">
+		<title>Q-Learning</title>
 	</head>
 	<body>
 		<div id="initializing">
